--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="#news" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">最新消息</a>
                 <a href="#violetevergarden" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">大會組織</a>
                 <a href="#about" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">關於研討會</a>
-                <a href="86wewontforget.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">註冊投稿</a>
+                <a href="#86" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">註冊投稿</a>
                 <a href="#schedule" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">議程</a>
                 <a href="registration.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">報名資訊</a>
                 <a href="#submission" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">活動資訊</a>
@@ -113,7 +113,7 @@
             <a href="#news" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">最新消息</a>
             <a href="#violetevergarden" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">大會組織</a>
             <a href="#about" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">關於研討會</a>
-            <a href="86wewontforget.html" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">註冊投稿</a>
+            <a href="#86" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">註冊投稿</a>
             <a href="#schedule" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">議程</a>
             <a href="registration.html" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">報名資訊</a>
             <a href="#submission" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">活動資訊</a>
@@ -379,6 +379,138 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- thesis upload Section -->
+        <section id="86" class="py-16 md:py-24">
+            <div class="container mx-auto px-6">
+                <div class="text-center mb-16">
+                    <h2 class="text-[35px] font-bold text-gray-800">研討會論文投稿</h2>
+                    <div class="w-24 h-1 bg-blue-600 mx-auto mt-4"></div>
+                </div>
+
+                <div class="max-w-5xl mx-auto space-y-20">
+                    <!-- Subsection 1: Topics and Introduction -->
+                    <div>
+                        <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">重要時程</h3>
+                        <div class="text-left text-gray-600 leading-relaxed text-xl space-y-4">
+                            <table class="w-full text-left border-collapse bg-gray-100">
+                                <thead>
+                                    <tr class="bg-purple-100">
+                                        <th class="p-4 border-b-2 border-purple-200 text-purple-800 w-3/5 text-center">項目</th>
+                                        <th class="p-4 border-b-2 border-purple-200 text-purple-800 w-2/5 text-center">日期</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="hover:bg-purple-50 text-center">
+                                        <td class="p-4 border-b border-purple-200">開始投稿和線上報名</td>
+                                        <td class="p-4 border-b border-purple-200">2025.12.22</td>
+                                    </tr>
+                                    <tr class="hover:bg-purple-50 text-center">
+                                        <td class="p-4 border-b border-purple-200">投稿截止</td>
+                                        <td class="p-4 border-b border-purple-200">2026.02.09</td>
+                                    </tr>
+                                    <tr class="hover:bg-purple-50 text-center">
+                                        <td class="p-4 border-b border-purple-200">寄發論文接受信</td>
+                                        <td class="p-4 border-b border-purple-200 ">2026.02.16</td>
+                                    </tr>
+                                    <tr class="hover:bg-purple-50 text-center">
+                                        <td class="p-4 border-b border-purple-200">論文定稿上傳截止</td>
+                                        <td class="p-4 border-b border-purple-200 ">2026.03.06</td>
+                                    </tr>
+                                    <tr class="hover:bg-purple-50 text-center">
+                                        <td class="p-4 border-b border-purple-200">費用繳交與研討會報名截止</td>
+                                        <td class="p-4 border-b border-purple-200 ">2026.03.06</td>
+                                    </tr>
+                                    <tr class="hover:bg-purple-50 text-center">
+                                        <td class="p-4 border-b border-purple-200">研討會舉辦日期</td>
+                                        <td class="p-4 border-b border-purple-200 ">2026.03.28</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">投稿須知</h3>
+                        <div class="text-left text-gray-600 leading-relaxed text-xl space-y-4">
+                            <h4 class="text-3xl font-bold text-gray-800 mb-6 text-left">論文格式</h4>
+                            <ul class="list-disc list-inside">
+                                <li>採延伸摘要形式，中文一頁、英文一頁</li>
+                                <li>請依大會提供之範本檔案撰寫（格式下載連結、範本下載連結）</li>
+                                <li>檔案格式：請提供 Word 檔，若擔心版型問題可另附 PDF 檔</li>
+                            </ul>
+
+                            <h4 class="text-3xl font-bold text-gray-800 mb-6 text-left">投稿類型</h4>
+                            <ul class="list-disc list-inside">
+                                <li>分為口頭報告與海報發表兩種形式</li>
+                                <li>請於投稿系統中勾選偏好類型，審查委員將根據論文內容給予建議</li>
+                            </ul>
+
+                            <h4 class="text-3xl font-bold text-gray-800 mb-6 text-left">發表規定</h4>
+                            <ul class="list-disc list-inside">
+                                <li>每篇論文可登錄多位作者</li>
+                                <li>每篇論文至少須有一位作者完成註冊繳費，論文方可收錄並安排發表場次</li>
+                            </ul>
+
+                            <h4 class="text-3xl font-bold text-gray-800 mb-6 text-left">審查方式</h4>
+                            <ul class="list-disc list-inside">
+                                <li>採單盲審查，每篇論文至少由一位審查委員進行審查</li>
+                            </ul>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <div>
+                        <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">投稿方式</h3>
+                        <div class="text-center text-gray-600 leading-relaxed text-xl space-y-4">
+                            <p>請至線上投稿系統完成投稿：<br> <a href="https://cmt3.research.microsoft.com/EST2026/Submission/Index" class="text-blue-600">
+                                https://cmt3.research.microsoft.com/EST2026/Submission/Index</a></p>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <div>
+                        <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">徵稿主題</h3>
+                        <div class="text-left text-gray-600 leading-relaxed text-xl space-y-4">
+                            <ol class="list-decimal list-inside space-y-1">
+                                <li>人因與人工智慧 Ergonomics and Artificial Intelligence</li>
+                                <li>人因與大數據分析 Ergonomics and Big Data Analysis</li>
+                                <li>人因與雲端運算應用 Ergonomics and Cloud Computing</li>
+                                <li>人因與智慧生產製造 Ergonomics and Smart Factory</li>
+                                <li>人因與智慧生活科技 Ergonomics and Smart Technology</li>
+                                <li>人因與綠色永續管理 Ergonomics and Sustainability Management</li>
+                                <li>延展實境 Extended Reality (XR)</li>
+                                <li>電腦系統與人機互動 Human-Computer Interaction</li>
+                                <li>電腦輔助人因工程 Computer-aided Ergonomics</li>
+                                <li>人體計測與應用 Anthropometry</li>
+                                <li>生物力學、工作生理學 Biomechanics or Work Physiology</li>
+                                <li>認知人因 Cognitive Ergonomics</li>
+                                <li>壓力、心智工作負荷 Stress or Mental Workload</li>
+                                <li>人員可靠度、績效、個別差異 Human Reliability, Performance or Individual Difference</li>
+                                <li>產品設計人因 Ergonomics in Product Design</li>
+                                <li>通用設計、感性設計 Universal or Affective Design</li>
+                                <li>宏觀人因、系統安全 Macro-Ergonomics or System Safety</li>
+                                <li>組織管理與文化差異 Organizational Management or Cultural Differences</li>
+                                <li>職業安全與衛生管理 Occupational Safety and Health Management</li>
+                                <li>運動與休閒人因 Ergonomics in Sports and Leisure</li>
+                                <li>人因工程與教育訓練系統 Ergonomics in Educational Training System</li>
+                                <li>軍事科技人因 Ergonomics in Military Technology</li>
+                                <li>運輸交通人因 Ergonomics in Transportation</li>
+                                <li>醫療人因與病安管理 Healthcare Ergonomics and Patient Safety Management</li>
+                                <li>高齡及長照人因 Ergonomics in Aging & Long-term Care Service</li>
+                                <li>醫療器材之人因工程與優使性評估 Human Factors and Usability Testing of Medical Devices</li>
+                                <li>其他 Others</li>
+                            </ol>
+                        </div>
+                    </div>
+
+                    <!-- Subsection 2: Organizer Introduction -->
+                    <div class="flex flex-col md:flex-row items-center gap-8 md:gap-12">
+                        
                     </div>
                 </div>
             </div>
@@ -1458,7 +1590,6 @@
     </script>
 </body>
 </html>
-
 
 
 
