--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                             <h4 class="text-3xl font-bold text-gray-800 mb-6 text-left">論文格式</h4>
                             <ul class="list-disc list-inside">
                                 <li>採延伸摘要形式，中文一頁、英文一頁</li>
-                                <li>請依大會提供之範本檔案撰寫（<a href="format.docx" class=""format.docx" >格式下載連結</a>、<a href="temp.pdf" class=""temp.pdf" cla>範本下載連結</a>）</li>
+                                <li>請依大會提供之範本檔案撰寫（<a href="format.docx" class="format.docx" >格式下載連結</a>、<a href="temp.pdf" class="temp.pdf" cla>範本下載連結</a>）</li>
                                 <li>檔案格式：請提供 Word 檔，若擔心版型問題可另附 PDF 檔</li>
                             </ul>
 
@@ -1590,6 +1590,7 @@
     </script>
 </body>
 </html>
+
 
 
 
