--- a/index.html
+++ b/index.html
@@ -467,8 +467,11 @@
                         <div>
                         <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">投稿方式</h3>
                         <div class="text-center text-gray-600 leading-relaxed text-xl space-y-4">
-                            <p>請至線上投稿系統完成投稿：<br> <a href="https://cmt3.research.microsoft.com/EST2026/Submission/Index" class="text-blue-600">
-                                https://cmt3.research.microsoft.com/EST2026/Submission/Index</a></p>
+                            <p>請至線上投稿系統完成投稿：<br> 
+                                <a href="https://cmt3.research.microsoft.com/EST2026/Submission/Index" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105">
+                                    立即投稿
+                                </a>
+                                </p>
                         </div>
                         <br>
                         <br>
@@ -1590,6 +1593,7 @@
     </script>
 </body>
 </html>
+
 
 
 
