--- a/index.html
+++ b/index.html
@@ -467,11 +467,13 @@
                         <div>
                         <h3 class="text-3xl font-bold text-gray-800 mb-6 text-center">投稿方式</h3>
                         <div class="text-center text-gray-600 leading-relaxed text-xl space-y-4">
-                            <p>請至線上投稿系統完成投稿：<br> 
+                            <p>請至線上投稿系統完成投稿：
+                                <br> 
+                                <br> 
                                 <a href="https://cmt3.research.microsoft.com/EST2026/Submission/Index" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105">
                                     立即投稿
                                 </a>
-                                </p>
+                            </p>
                         </div>
                         <br>
                         <br>
@@ -1593,6 +1595,7 @@
     </script>
 </body>
 </html>
+
 
 
 
