--- a/index.html
+++ b/index.html
@@ -928,38 +928,50 @@
                                 <li>每一組入圍隊伍簡報發表以 10 分鐘為原則，發表過程以中文為主說明。</li>
                             </ul>
 
-                            <h3 class="text-2xl font-semibold text-gray-800 pt-4">評選標準</h3>
-                            <table class="w-full text-left border-collapse bg-gray-100">
-                            <thead>
-                                <tr class="bg-blue-100">
-                                    <th class="p-4 border-b-2 border-black-200 text-black-800 w-1/5 text-center">評審指標</th>
-                                    <th class="p-4 border-b-2 border-black-200 text-black-800 w-3/5 text-center">定義</th>
-                                    <th class="p-4 border-b-2 border-black-200 text-black-800 w-1/5 text-center">比重</th>
-                                </tr>
-                            </thead>
+                        <h3 class="text-2xl font-semibold text-gray-800 pt-4">評選標準</h3>
+                        <div class="overflow-x-auto mt-4 border rounded-lg">
+                            <table class="w-full min-w-[600px] text-left border-collapse bg-gray-100 text-sm md:text-base">
+                                <thead>
+                                    <tr class="bg-blue-100">
+                                        <th class="p-2 md:p-4 border-b-2 border-black-200 text-black-800 text-center whitespace-nowrap w-[140px] min-w-[140px]">
+                                            評審指標
+                                        </th>
+
+                                        <th class="p-2 md:p-4 border-b-2 border-black-200 text-black-800 text-center whitespace-nowrap w-auto">
+                                            定義
+                                        </th>
+
+                                        <th class="p-2 md:p-4 border-b-2 border-black-200 text-black-800 text-center whitespace-nowrap w-[80px]">
+                                            比重
+                                        </th>
+                                    </tr>
+                                </thead>
                                 <tbody>
                                     <tr class="text-center">
-                                        <td class="p-4 border-b border-black-200"><p>人因工程特點</p>與知識</td>
-                                        <td class="p-4 border-b border-black-200">人因工程(Human factors and ergonomics)相關知識、工具、方法、以及理論應用於競賽產品設計。</td>
-                                        <td class="p-4 border-b border-black-200">50%</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">
+                                            <p>人因工程特點</p>與知識
+                                        </td>
+                                        <td class="p-2 md:p-4 border-b border-black-200 text-left">人因工程(Human factors and ergonomics)相關知識、工具、方法、以及理論應用於競賽產品設計。</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">50%</td>
                                     </tr>
                                     <tr class="text-center">
-                                        <td class="p-4 border-b border-black-200">概念創意</td>
-                                        <td class="p-4 border-b border-black-200">產品設計概念之創意發想、材質、或技術具創新性或原創性。</td>
-                                        <td class="p-4 border-b border-black-200">30%</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">概念創意</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200 text-left">產品設計概念之創意發想、材質、或技術具創新性或原創性。</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">30%</td>
                                     </tr>
                                     <tr class="text-center">
-                                        <td class="p-4 border-b border-black-200">技術可行性</td>
-                                        <td class="p-4 border-b border-black-200 ">產品設計概念之可行性、可操作性、技術應用成熟度及未來5年內商品化之可能。</td>
-                                        <td class="p-4 border-b border-black-200">10%</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">技術可行性</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200 text-left">產品設計概念之可行性、可操作性、技術應用成熟度及未來5年內商品化之可能。</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">10%</td>
                                     </tr>
                                     <tr class="text-center">
-                                        <td class="p-4 border-b border-black-200">市場潛力</td>
-                                        <td class="p-4 border-b border-black-200 ">產品設計概念與當前消費者市場需求之關聯性，包括市場大小、市場接受度、相似產品、及產品價格等衡量。</td>
-                                        <td class="p-4 border-b border-black-200">10%</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">市場潛力</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200 text-left">產品設計概念與當前消費者市場需求之關聯性，包括市場大小、市場接受度、相似產品、及產品價格等衡量。</td>
+                                        <td class="p-2 md:p-4 border-b border-black-200">10%</td>
                                     </tr>
                                 </tbody>
                             </table>
+                        </div>
 
                             <h3 class="text-2xl font-semibold text-gray-800 pt-4">獎項</h3>
                             <ul class="list-disc list-outside pl-5 space-y-2"></ol>
