--- a/index.html
+++ b/index.html
@@ -1152,91 +1152,58 @@
 
         <!-- About Section -->
         <section id="sponsors" class="py-16 md:py-24 ">
-            <div class="container mx-auto px-6">
-                <div class="max-w-5xl mx-auto space-y-20">
-                    <!-- Subsection 3: Sponsors and Partners -->
-                    <div>
-                        <h3 class="text-3xl font-bold text-gray-800 mb-8 text-center">贊助單位(新增中)</h3>
-                        <p class="text-center text-xl text-gray-600 mb-10">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
-                        <div class="grid grid-cols-2 md:grid-cols-4 gap-10 items-center">
-                            <div class="flex justify-center" title="中原大學">
-                                <img src="CYCU.png" alt="中原大學" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="國科會">
-                                <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="中科院">
-                                <img src="NCSIST.jpg" alt="中科院" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="中原大學工業與系統工程學系">
-                                <img src="cycuiselogo.jpg" alt="中原大學工業與系統工程學系" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="勞動部勞動及職業安全衛生所">
-                                <img src="IOSH.svg" alt="勞動部勞動及職業安全衛生所" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="工程科技推展中心">
-                                <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="人工智慧協會">
-                                <img src="TAIA.JPG" alt="人工智慧協會" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="智飛科技股份有限公司">
-                                <img src="UAV.JPG" alt="智飛科技股份有限公司" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="皮托科技">
-                                <img src="PT.png" alt="皮托科技" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="拓比有限公司">
-                                <img src="tobii.jpg" alt="tobii拓比有限公司" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="先進工程研究中心">
-                                <img src="ASERC.png" alt="先進工程研究中心" class="max-h-40 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="奇翼">
-                                <img src="sw.png" alt="奇翼" class="max-h-40 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <!--
-                            <div class="flex justify-center" title="先進工程研究中心">
-                                <img src="MILCA.png" alt="金屬產業低碳聯盟" class="max-h-40 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="高科大工業工程與管理系">
-                                <img src="IEM.png" alt="高科大工業工程與管理系" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                             <div class="flex justify-center" title="中科院">
-                                <img src="NCSIST.jpg" alt="中科院" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="中原大學工業與系統工程學系">
-                                <img src="cycuiselogo.jpg" alt="中原大學工業與系統工程學系" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="高科資管">
-                                <img src="MSYS.png" alt="高科資管" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="中華萃思學會">
-                                <img src="TTA.jpg" alt="中華萃思學會" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="財團法人門諾醫院">
-                                <img src="MCH.png" alt="財團法人門諾醫院" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="員榮社團法人">
-                                <img src="YR.png" alt="員榮社團法人" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="勞動部勞動及職業安全衛生所">
-                                <img src="IOSH.svg" alt="勞動部勞動及職業安全衛生所" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="合研科技">
-                                <img src="HY.jpeg" alt="合研科技" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="工程科技推展中心">
-                                <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="富足康科技足墊">
-                                <img src="FTC.jpg" alt="富足康科技足墊" class="max-h-25 transition-all duration-300 cursor-pointer">
-                            </div>
-                            -->
-                        </div>
-                    </div>
+            <h3 class="md:text-5xl font-bold text-gray-800 mb-8 text-center">贊助單位(新增中)</h3>
+            <p class="text-center md:text-4xl font-bold text-gray-800 mb-10">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
+            <div class="flex flex-col gap-10"> <div class="grid grid-cols-3 md:grid-cols-3 gap-10 items-center justify-center max-w-2xl mx-auto">
+                <div class="flex justify-center" title="人因工程學會">
+                    <img src="estlogo.jpg" alt="人因工程學會" class="max-h-30 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="中原大學">
+                    <img src="CYCU.png" alt="中原大學" class="max-h-30 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="中原大學工業與系統工程學系">
+                    <img src="cycuiselogo.jpg" alt="中原大學工業與系統工程學系" class="max-h-25 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                
+            </div>
+
+            <div class="grid grid-cols-6 md:grid-cols-6 gap-10 items-center">
+                <div class="flex justify-center" title="人工智慧協會">
+                    <img src="TAIA.JPG" alt="人工智慧協會" class="max-h-30 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="勞動部勞動及職業安全衛生所">
+                    <img src="IOSH.svg" alt="勞動部勞動及職業安全衛生所" class="max-h-25 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="中科院">
+                    <img src="NCSIST.jpg" alt="中科院" class="max-h-25 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="先進工程研究中心">
+                    <img src="ASERC.png" alt="先進工程研究中心" class="max-h-40 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="國科會">
+                    <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="工程科技推展中心">
+                    <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer hover:scale-110">
                 </div>
             </div>
+
+            <div class="grid grid-cols-5 md:grid-cols-5 gap-10 items-center">
+                <div class="flex justify-center" title="奇翼">
+                    <img src="sw.png" alt="奇翼" class="max-h-40 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="智飛科技股份有限公司">
+                    <img src="UAV.JPG" alt="智飛科技股份有限公司" class="max-h-30 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="皮托科技">
+                    <img src="PT.png" alt="皮托科技" class="max-h-25 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                <div class="flex justify-center" title="拓比有限公司">
+                    <img src="tobii.jpg" alt="tobii拓比有限公司" class="max-h-25 transition-all duration-300 cursor-pointer hover:scale-110">
+                </div>
+                
+            </div>
+
         </section>
 
         <!-- Contact Section -->
@@ -1748,7 +1715,6 @@
     </script>
 </body>
 </html>
-
 
 
 
