--- a/index.html
+++ b/index.html
@@ -1154,11 +1154,10 @@
         <section id="sponsors" class="py-16 md:py-24">
             <div class="container mx-auto px-6 md:px-16 max-w-7xl">
                 
-                <h3 class="md:text-5xl font-bold text-gray-800 mb-8 text-center">贊助單位(新增中)</h3>
                 <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
 
                 <div class="flex flex-col gap-12"> 
-                    
+                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">主辦單位</p>
                     <div class="grid grid-cols-3 md:grid-cols-3 gap-8 items-center justify-items-center">
                         <div class="flex justify-center w-full" title="人因工程學會">
                             <img src="estlogo.jpg" alt="人因工程學會" class="h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1171,6 +1170,7 @@
                         </div>
                     </div>
 
+                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">協辦單位(新增中)</p>
                     <div class="grid grid-cols-3 md:grid-cols-6 gap-8 items-center justify-items-center">
                         <div class="flex justify-center w-full" title="人工智慧協會">
                             <img src="TAIA.JPG" alt="人工智慧協會" class="h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1192,6 +1192,7 @@
                         </div>
                     </div>
 
+                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">贊助單位(新增中)</p>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-8 items-center justify-items-center">
                         <div class="flex justify-center w-full" title="奇翼">
                             <img src="sw.png" alt="奇翼" class="h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
