--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
                 <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
 
                 <div class="flex flex-col gap-12"> 
-                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">主辦單位</p>
+                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">主辦單位:</p>
                     <div class="grid grid-cols-3 md:grid-cols-3 gap-8 items-center justify-items-center">
                         <div class="flex justify-center w-full" title="人因工程學會">
                             <img src="estlogo.jpg" alt="人因工程學會" class="h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1170,7 +1170,7 @@
                         </div>
                     </div>
 
-                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">協辦單位(新增中)</p>
+                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">協辦單位(新增中):</p>
                     <div class="grid grid-cols-3 md:grid-cols-6 gap-8 items-center justify-items-center">
                         <div class="flex justify-center w-full" title="人工智慧協會">
                             <img src="TAIA.JPG" alt="人工智慧協會" class="h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1192,7 +1192,7 @@
                         </div>
                     </div>
 
-                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">贊助單位(新增中)</p>
+                    <p class="text-center md:text-4xl font-bold text-gray-800 mb-16">贊助單位(新增中):</p>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-8 items-center justify-items-center">
                         <div class="flex justify-center w-full" title="奇翼">
                             <img src="sw.png" alt="奇翼" class="h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1721,6 +1721,7 @@
     </script>
 </body>
 </html>
+
 
 
 
