--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
         <section id="sponsors" class="py-16 md:py-24">
             <div class="container mx-auto px-6 md:px-16 max-w-7xl">
                 
-                <p class="text-center md:text-4xl font-bold text-gray-800 mb-10">感謝以下單位對本次研討會的支持與贊助，共同推動人因工程的發表。<span class="hidden md:block"><br></span>亦歡迎更多機構與企業加入贊助行列，請與我們聯繫</p>
+                <p class="text-center md:text-4xl font-bold text-gray-800 mb-10">感謝以下單位對本次研討會的支持與贊助，<span class="md:hidden"><br></span>共同推動人因工程的發表。<br>亦歡迎更多機構與企業加入贊助行列，<span class="md:hidden"><br></span>請與我們聯繫</p>
 
                 <div class="flex flex-col gap-5 md:gap-16"> 
                     <div>
@@ -1729,6 +1729,7 @@
     </script>
 </body>
 </html>
+
 
 
 
