--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇(I+II+III)</td>
+                                    <td class="p-4 border-b border-purple-200">論壇(I+II)</td>
                                     <td class="p-4 border-b border-purple-200">14:00 - 15:15</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
@@ -640,7 +640,7 @@
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇(IV+V)</td>
+                                    <td class="p-4 border-b border-purple-200">論壇(III+IV+V)</td>
                                     <td class="p-4 border-b border-purple-200 ">15:25 - 16:40</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
@@ -650,7 +650,7 @@
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇(VI+VII)</td>
+                                    <td class="p-4 border-b border-purple-200">論壇(VI+VII+VIII)</td>
                                     <td class="p-4 border-b border-purple-200 ">16:50 - 18:00</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
@@ -1729,6 +1729,7 @@
     </script>
 </body>
 </html>
+
 
 
 
