--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
                         </div>
                     <div>
                         <p class="text-center md:text-4xl font-bold text-gray-800">贊助單位(新增中):</p>
-                        <div class="grid grid-cols-2 md:grid-cols-3 gap-8 items-center justify-items-center">
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-8 items-center justify-items-center">
                             <div class="flex justify-center w-full" title="奇翼">
                                 <img src="sw.png" alt="奇翼" class="h-20 md:h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
                             </div>
@@ -1199,6 +1199,9 @@
                             </div>
                             <div class="flex justify-center w-full" title="皮托科技">
                                 <img src="PT.png" alt="皮托科技" class="h-20 md:h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
+                            </div>
+                            <div class="flex justify-center w-full" title="富足康">
+                                <img src="FTC.jpg" alt="富足康" class="h-20 md:h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
                             </div>
                             
                         </div>
@@ -1729,6 +1732,7 @@
     </script>
 </body>
 </html>
+
 
 
 
