--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
 
                 <div class="flex flex-col gap-5 md:gap-16"> 
                     <div>
-                        <p class="text-center md:text-4xl font-bold text-gray-800 mb-5">主辦單位:</p>
+                        <p class="text-center md:text-4xl font-bold text-gray-800 md:mb-5">主辦單位:</p>
                         <div class="grid grid-cols-3 md:grid-cols-3 gap-8 items-center justify-items-center">
                             <div class="flex justify-center w-full" title="人因工程學會">
                                 <img src="estlogo.jpg" alt="人因工程學會" class="h-25 md:h-45 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1172,7 +1172,7 @@
                         </div>
                     </div>
                     <div>
-                        <p class="text-center md:text-4xl font-bold text-gray-800 mb-5">協辦單位(新增中):</p>
+                        <p class="text-center md:text-4xl font-bold text-gray-800 md:mb-5">協辦單位(新增中):</p>
                         <div class="grid grid-cols-3 md:grid-cols-4 gap-8 items-center justify-items-center">
                             <div class="flex justify-center w-full" title="人工智慧協會">
                                 <img src="TAIA.JPG" alt="人工智慧協會" class="h-20 md:h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1192,7 +1192,7 @@
                     </div>     
                         </div>
                     <div>
-                        <p class="text-center md:text-4xl font-bold text-gray-800 mb-5">贊助單位(新增中):</p>
+                        <p class="text-center md:text-4xl font-bold text-gray-800 md:mb-5">贊助單位(新增中):</p>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-8 items-center justify-items-center">
                             <div class="flex justify-center w-full" title="奇翼">
                                 <img src="sw.png" alt="奇翼" class="h-20 md:h-40 w-auto object-contain transition-all duration-300 cursor-pointer hover:scale-110">
@@ -1735,6 +1735,7 @@
     </script>
 </body>
 </html>
+
 
 
 
