--- a/index.html
+++ b/index.html
@@ -412,15 +412,15 @@
                                     </tr>
                                     <tr class="hover:bg-purple-50 text-center">
                                         <td class="p-4 border-b border-purple-200">投稿截止(更新)</td>
-                                        <td class="p-4 border-b border-purple-200"><div class="line-through">2026.02.09</div>2026.02.13</td>
+                                        <td class="p-4 border-b border-purple-200"><div class="line-through">2026.02.09</div><div class="text-red-600 font-bold">2026.02.13</div></td>
                                     </tr>
                                     <tr class="hover:bg-purple-50 text-center">
                                         <td class="p-4 border-b border-purple-200">寄發論文接受信(更新)</td>
-                                        <td class="p-4 border-b border-purple-200 "><div class="line-through">2026.02.16</div>2026.02.23</td>
+                                        <td class="p-4 border-b border-purple-200 "><div class="line-through">2026.02.16</div><div class="text-red-600 font-bold">2026.02.23</div></td>
                                     </tr>
                                     <tr class="hover:bg-purple-50 text-center">
                                         <td class="p-4 border-b border-purple-200 font-bold">早鳥優惠截止(新增)</td>
-                                        <td class="p-4 border-b border-purple-200 font-bold">2026.02.17</td>
+                                        <td class="p-4 border-b border-purple-200 font-bold text-red-600">2026.02.26</td>
                                     </tr>
                                     <tr class="hover:bg-purple-50 text-center">
                                         <td class="p-4 border-b border-purple-200">論文定稿上傳截止</td>
@@ -789,8 +789,8 @@
                         <thead>
                             <tr class="bg-blue-100 ">
                                 <th class="p-4 border-b-2 border-blue-200 text-blue-800 rounded-tl-lg">身份</th>
-                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 ">費用(before 2月27日)</th>
-                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 rounded-tr-lg">費用(after 2月28日)</th>
+                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 ">費用(before 2月26日)</th>
+                                <th class="p-4 border-b-2 border-blue-200 text-blue-800 rounded-tr-lg">費用(after 2月27日)</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -852,7 +852,7 @@
                                 <li><strong>開始投稿和線上報名：</strong> 2025.12.22</li>
                                 <li><strong>(更新)徵稿截止：</strong> 2026.02.13</li>
                                 <li><strong>(更新)寄發論文接受信：</strong> 2026.02.23</li>
-                                <li><strong>(新增)早鳥優惠截止：</strong> 2026.02.27</li>
+                                <li><strong>(新增)早鳥優惠截止：</strong> 2026.02.26</li>
                                 <li><strong>論文定稿上傳截止：</strong> 2026.03.06</li>
                                 <li><strong>費用繳交與討論會報名截止：</strong> 2026.03.06</li>
                                 <li><strong>研討會舉辦日期：</strong> 2026.03.28</li>
@@ -1354,7 +1354,7 @@
         // --- NEWS DATA & LOGIC ---
         const allNewsData = [
             { date: '2025年12月22日', title: '徵稿期限延長', content: '原訂本次研討會投稿截止日期為2026/02/09。為鼓勵更多學生踴躍投稿並參與年會，同時提供投稿者更充裕的準備時間，主辦單位決定延長徵稿期限至2026/02/13。<br>配合徵稿延期，論文審查結果通知日期亦調整為2026/02/23。', category: '最新消息' },
-            { date: '2025年12月22日', title: ' 早鳥報名時間更新', content: '2026/02/27前繳交報名註冊費，即可獲得早鳥優惠，詳情可至報名資訊查看，歡迎踴躍報名', category: '最新消息' },
+            { date: '2025年12月22日', title: ' 早鳥報名時間更新', content: '2026/02/26前繳交報名註冊費，即可獲得早鳥優惠，詳情可至報名資訊查看，歡迎踴躍報名', category: '最新消息' },
             { date: '2026年01月15日', title: '早鳥報名', content: '若在2026/02/10前報名，即可獲得早鳥優惠，詳情可至報名資訊查看，歡迎踴躍報名', category: '一般公告' },
             { date: '2025年12月22日', title: '論文徵稿', content: '自2025/12/22起至2026/02/09開放論文徵稿囉，歡迎大家踴躍投稿', category: '一般公告' },
             { date: '2025年12月2日', title: '網站上線', content: '研討會官方網站今日正式啟用，歡迎多加利用。', category: '一般公告' },
@@ -1397,7 +1397,7 @@
         
         // Render news on the homepage
         const homepageNewsContainer = document.getElementById('news-list-homepage');
-        homepageNewsContainer.innerHTML = allNewsData.slice(0, 4).map((news, index) => createNewsItemHTML(news, index)).join('');
+        homepageNewsContainer.innerHTML = allNewsData.slice(0, 2).map((news, index) => createNewsItemHTML(news, index)).join('');
         
         // Render all news in the modal
         const modalNewsContainer = document.getElementById('news-list-modal');
